--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 h1.logo a img{width: 16rem;}
 .menu ul{margin: 0 !important;}
 .menu ul li{margin-right: 7rem;}
-.menu ul li a{display: block; font-size: 2.5rem; font-weight: 600;}
+.menu ul li a{display: block; font-size: 2rem; font-weight: 600;}
 
 .order{position: relative;}
 .order-ob-wrap{padding-top: 5rem; box-sizing: border-box; position: absolute; top: 0; left: -120%; display: none;}
@@ -83,13 +83,13 @@ h1.logo a img{width: 16rem;}
 .main-slick-wrap:hover{cursor : url(../img/Frame01.png), auto;}
 .main-vi-wrap img:hover{cursor : url(../img/Frame01.png), auto;}
 .banner-bg{width: 100%; position: relative; position: relative;}
-.banner-bg img.banner-bg-img{height: 70vh; max-height: 144rem;}
+.banner-bg img.banner-bg-img{height: 85vh; max-height: 144rem;}
 .banner-bg>img{width: 100%; height: auto; display: block; }
 .banner-img{width: 100%; position: absolute; top: 50%; left: 50%; max-width: 1200px; transform: translate(-50%, -50%); text-align: center;}
 .banner-img a{display: block;}
 .banner-img a img{width: 100%; display: inline-block;}
 
-.banner-bg2{background-color: var(--base-beige); text-align: center; height: 70vh; max-height: 144rem; position: relative;}
+.banner-bg2{background-color: var(--base-beige); text-align: center; height: 85vh; max-height: 144rem; position: relative;}
 .banner-bg2-wrap{position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
 .banner-bg2 .banner-text{color: #D4000B; font-weight: 700; -webkit-text-stroke: 1px #D4000B; font-family: 'Rubik'; text-align: center; letter-spacing: 0.8px;  position: relative;}
 .banner-bg2 .banner-text p{font-size: 7rem; text-shadow: 5px 0px rgb(0, 0, 0); line-height: 1.2; position: relative; display: inline-block;}
@@ -120,7 +120,7 @@ h1.logo a img{width: 16rem;}
 .goobnews-pc{background: var(--base-beige);}
 .news-img-wrap{width: 65%;  padding: 10rem 0;}
 .news-around-wrap{text-align: center;}
-.news-around-wrap h2{font-size: 10rem; color: var(--base-red); margin: 5rem 0;}
+.news-around-wrap h2{font-size: 8rem; color: var(--base-red); margin: 5rem 0;}
 .news-around{position: relative; padding: 3rem; display: inline-block; overflow: hidden; height: 35rem;}
 .news-img{display: inline-block; width: 40rem; height: 35rem;}
 .news-img img{width: 100%; height: 100%;}
@@ -137,7 +137,7 @@ h1.logo a img{width: 16rem;}
 .news-text{flex-basis: 20%; width: 100%; border: 1px solid #ddd; box-sizing: border-box;}
 .news-content.active{background: var(--base-red); width: 130%; transform: translateX(-11.5%);}
 .news-text.active p{color: var(--text-white); width: 70rem;}
-.news-title h3{font-size: 6rem;}
+.news-title h3{font-size: 5rem;}
 .news-text p{margin: 0 auto; display: block; width: 55rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 3.5rem; }
 .goobnews-m{display: none;}
 
@@ -145,8 +145,8 @@ h1.logo a img{width: 16rem;}
 .oven-menu{height: auto;}
 .text-wrap{flex-basis: 35%; background: var(--base-white); justify-content: end;}
 .text-wrap-1{flex-direction: column; transform: rotate(-90deg); text-align: center;}
-.text-wrap-1 span{font-size: 10rem; margin-bottom: 3.5rem; font-weight: bold;  font-family: 'Righteous', cursive;}
-.text-wrap-1 span.first{padding-top: 35rem; animation: oven1 2s forwards infinite; }
+.text-wrap-1 span{font-size: 8rem; margin-bottom: 3.5rem; font-weight: bold;  font-family: 'Righteous', cursive;}
+.text-wrap-1 span.first{padding-top: 30rem; animation: oven1 2s forwards infinite; }
 .text-wrap-1 span.second{animation: oven2 2s forwards ease-out infinite;}
 .text-wrap-1 span.third{color: var(--base-red); animation: oven3 2s ease-out infinite;}
 .img-wrap{flex-basis: 65%; background: var(--base-beige);}
@@ -197,8 +197,8 @@ h1.logo a img{width: 16rem;}
 .goobster-bg3{flex-basis: 30%;}
 .goobster-bg5{flex-basis: 50%;}
 .goobster-bg7{flex-basis: 70%; text-align: center; justify-content: center;}
-.goobster-bg7 h2{font-size: 10rem; padding-left: 8.5rem; color: #D4000B;}
-.goobster-bg7 h2 img{filter: invert(15%) sepia(92%) saturate(4626%) hue-rotate(349deg) brightness(79%) contrast(116%); width: 8rem;}
+.goobster-bg7 h2{font-size: 8rem; padding-left: 8.5rem; color: #D4000B;}
+.goobster-bg7 h2 img{filter: invert(15%) sepia(92%) saturate(4626%) hue-rotate(349deg) brightness(79%) contrast(116%); width: 6rem;}
 .goobster-beige{background: var(--base-beige); line-height: 100%;}
 
 .goobster-img{position: absolute; top: 60%; left: 0; transform: translateY(-50%); background: #D4000B; overflow: hidden;}
@@ -210,7 +210,7 @@ h1.logo a img{width: 16rem;}
 
 /* goobtube */
 .goobtube{background: var(--base-beige);}
-.goobtube h2{font-size: 10rem; text-align: center; color: var(--base-red); margin-top: 5rem;}
+.goobtube h2{font-size: 8rem; text-align: center; color: var(--base-red); margin-top: 5rem;}
 .nfmc{overflow: hidden; background: transparent; justify-content: center; height: 9rem; border-top: 1px solid #050000; border-bottom: 1px solid #050000; box-sizing: border-box; margin: 8rem 0;}
 .nfmc ul{width: calc(430px * 15);}
 .nfmc ul li{justify-content: center; font-size: 3.2rem; font-family: 'Rubik'; font-weight: 600; width: 43rem; animation: textSlide 25s forwards linear infinite;}
@@ -219,7 +219,7 @@ h1.logo a img{width: 16rem;}
   100%{transform: translateX(-500%);}
 }
 
-.out-in-img.inner{position: relative; background: none; width: 180rem; overflow: hidden;}
+.out-in-img.inner{position: relative; background: none; width: 175rem; overflow: hidden;}
 .oii{display: none; position: relative; width: 100%; height: 50rem;}
 .oii.active{display: block;}
 .oii-img, .oii-text{position: absolute; top: 50%; transform: translateY(-50%); transition: all 1.5s;}
@@ -271,15 +271,15 @@ h1.logo a img{width: 16rem;}
   .banner-bg2 .banner-img2 .goobne-btn span em{font-size: 3rem;}
 
   /* goobnews */
-  .news-around-wrap h2{font-size: 8rem;}
-  .news-title h3{font-size: 5rem;}
+  .news-around-wrap h2{font-size: 6rem;}
+  .news-title h3{font-size: 4rem;}
   .news-text.active p{width: 55rem;}
-  .news-text p{width: 45rem;}
+  .news-text p{width: 45rem; font-size: 3rem;}
 
   /* oven menu */
   .img-wrap-1{ padding: 15rem 0;}
-  .text-wrap-1 span{font-size: 8rem;}
-  .text-wrap-1 span.first{padding-top: 30rem;}
+  .text-wrap-1 span{font-size: 6rem;}
+  .text-wrap-1 span.first{padding-top: 22rem;}
   .food{width: 27rem; height: 27rem;}
   .food::after{height: 4.5rem; font-size: 2.5rem;}
   .chicken{margin-bottom: 4rem;}
@@ -288,12 +288,12 @@ h1.logo a img{width: 16rem;}
 
   /* goobster */
   .goobster-wrap{height: 25rem;}
-  .goobster-bg7 h2{font-size: 8rem;}
-  .goobster-bg7 h2 img{width: 6rem;}
+  .goobster-bg7 h2{font-size: 6rem;}
+  .goobster-bg7 h2 img{width: 4rem;}
 
-  .goobtube h2{font-size: 8rem;}
+  .goobtube h2{font-size: 6rem;}
 
-  .out-in-img.inner{width: 1600px;}
+  .out-in-img.inner{width: 155rem;}
 
   /* footer */
   .footer-down>p{float: none; margin-top: 1.5rem;}
@@ -329,7 +329,7 @@ h1.logo a img{width: 16rem;}
   .nfmc{ margin: 4rem 0; height: 8rem;}
   .nfmc ul li{font-size: 3rem; width: 40rem;}
 
-  .out-in-img.inner{width: 1350px;}
+  .out-in-img.inner{width: 130rem;}
   .oii{height: 40rem;}
   .oii-img img{width: 48rem; height: 30rem;}
   .oii-text h3{font-size: 2.8rem;}
@@ -386,7 +386,7 @@ h1.logo a img{width: 16rem;}
   .nfmc{ margin: 4rem 0; height: 7rem;}
   .nfmc ul li{font-size: 2.5rem; width: 35rem;}
 
-  .out-in-img.inner{width: 1024px;}
+  .out-in-img.inner{width: 95rem;}
   .oii{height: 35rem;}
   .oii-img img{width: 43rem; height: 25rem;}
   .oii-text h3{font-size: 2.3rem;}
@@ -463,7 +463,7 @@ h1.logo a img{width: 16rem;}
   .nfmc{margin: 3rem 0; height: 5rem;}
   .nfmc ul li{font-size: 2rem; width: 28rem;}
 
-  .out-in-img.inner{width: 768px;}
+  .out-in-img.inner{width: 70rem;}
   .oii{height: 30rem;}
   .oii-img img{width: 28rem; height: 18rem;}
   .oii-text h3{font-size: 2rem;}
