--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,13 @@
 #header>.inner{padding-top: 2rem; background: none;}
 .header{height: 100%;}
 h1.logo a img{width: 16rem;}
-.menu ul{margin: 0 !important;}
+.menu ul{margin: 0 !important; text-align: center;}
 .menu ul li{margin-right: 7rem;}
-.menu ul li a{display: block; font-size: 3rem; font-weight: 600;}
+.menu ul li a{display: block; font-size: 2.5rem; font-weight: 600;}
+
+.sign{margin-right: 20px;}
+.sign ul li{margin: 5px;}
+.sign ul li a{display: block; font-size: 2rem; font-family: 'Rubik'; cursor: pointer;}
 
 .order{position: relative;}
 .order-ob-wrap{padding-top: 5rem; box-sizing: border-box; position: absolute; top: 0; left: -120%; display: none;}
@@ -26,10 +30,10 @@ h1.logo a img{width: 16rem;}
 .order-ob>button img{width: 2.5rem; height: 2.5rem; margin-right: 0.5rem;}
 
 
-.more-btn{width: 30px; height: 19px; position: relative;}
-.more-btn-wrap{width: 100%; height: 100%;}
+.more-btn{width: 130px; height: 29px;}
+.more-btn-wrap{width: 100%; height: 24px; display: block; position: relative;}
 
-.bar{display: block; width: 100%; height: 0.4rem; background: var(--base-black); position: absolute; transition: 0.3s;}
+.bar{display: block; width: 30px; height: 0.4rem; background: var(--base-black); position: absolute; transition: 0.3s;}
 .bar1{top: 0;}
 .bar1.toggle{top: 50%; margin-top: -1px; transform: rotate(45deg);}
 .bar2{top: 50%;}
@@ -345,7 +349,7 @@ h1.logo a img{width: 16rem;}
 @media screen and (max-width: 1349px) {
   /* header */
   h1.logo a img{width: 13rem;}
-  .menu ul li a{font-size: 2.5rem;}
+  .menu ul li a{font-size: 2rem;}
   .menu ul li{margin-right: 5rem;}
   .order-ob-wrap{left: -150%;}
 
@@ -409,7 +413,7 @@ h1.logo a img{width: 16rem;}
   h1.logo a img{width: 8rem;}
   .order-ob-wrap{top: -20%; left: -200%;}
   .menu ul li{margin-right: 4rem;}
-  .menu ul li a{font-size: 2rem;}
+  .menu ul li a{font-size: 1.5rem;}
   .more-btn img{width: 25px; height: 20px;}
 
   /* aside */
@@ -478,6 +482,7 @@ h1.logo a img{width: 16rem;}
   #header{padding: 2rem 0;}
   #header>.inner{padding: 0;}
   .menu{display: none;}
+  .sign{display: none;}
   .more-btn{width: 30px; height: 18px;}
 
   /* banner */
