--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ h1.logo a img{width: 16rem;}
 .sign ul li{margin: 5px;}
 .sign ul li a{display: block; font-size: 2rem; font-family: 'Rubik'; cursor: pointer;}
 
+.join{display: none;}
+
 .order{position: relative;}
 .order-ob-wrap{padding-top: 5rem; box-sizing: border-box; position: absolute; top: 0; left: -120%; display: none;}
 .order-ob{width: 30rem; height: 6.5rem; background: #fff; border-radius: 6px; border: 1px solid #000; display: flex; align-items:center; justify-content: center; box-sizing: border-box;}
