--- a/css/style.css
+++ b/css/style.css
@@ -22,19 +22,23 @@ h1.logo a img{width: 16rem;}
 .sign ul li a{display: block; font-size: 2rem; font-family: 'Rubik'; cursor: pointer;}
 
 .jbg{display: none; position: fixed; z-index: 9999; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background: rgba(0, 0, 0, 0.4);}
-.join{display: none; width: 90rem; height: 50rem; border-radius: 20px; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 99999; background: #ddd;}
+.join{display: none; width: 90rem; height: 50rem; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 99999; font-family: 'Rubik';}
 .jimg{flex-basis: 40%; max-width: 360px; height: 50rem;}
 .jimg-slide{width: 100%; height: 50rem;}
 .jimg-slide img{width: 100%; height: 50rem; border-radius: 20px 0 0 20px;}
 .jimg .slick-dots{bottom: 5rem;}
 
-.jreg{flex-basis: 60%; margin-left: 3rem;}
-.jtop{margin-top: 5rem;}
-.jtop h2{}
-.jtop button{}
+.jreg{flex-basis: 60%; padding: 3rem; box-sizing: border-box; background: rgba(211, 0, 11); border-radius: 0 20px 20px 0;}
+.jtop{margin-bottom: 1rem;}
+.jtop h2{font-size: 3rem;}
+.jtop button{background: transparent; cursor: pointer;}
 .jtop button img{}
-.jleft{}
-.jright{}
+.jleft{margin-right: 2rem;}
+.jright{margin-right: 2rem;}
+.inputArea{width: 100%;}
+.inputArea label{font-size: 1.5rem; font-weight: bold; display: block;}
+.inputArea input{width: 17rem; height: 3rem; border-radius: 10px;}
+.id-section>input
 .jbottom{}
 
 .order{position: relative;}
